--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="birth_date">Date Of Birth</string>
+    <string name="adharCard">Adhar Card No.</string>
     <string name="already_have_account">Already Have Account? Login</string>
     <string name="no_account">Create an account?</string>
     <string name="forgot_password">Forgot Password</string>
@@ -32,7 +33,11 @@
     <string name="incidentTime">Time Of Incident</string>
     <string name="policeStation">Police Station</string>
     <string name="submitReport">Submit Report</string>
-
-    /<!-- Status -->
+    <!-- Status -->
     <string name="yourStatus">Your Status</string>
+
+    <!-- Admin Side -->
+    <string name="admin_login">Admin Login</string>
+    <string name="add_admin">Admin Signup</string>
+
 </resources>
